--- a/templates/login.html
+++ b/templates/login.html
@@ -1,27 +1,27 @@
 {% extends "base.html" %}
 
-{% block title %}Login - Music Management{% endblock %}
+{% block title %}ログイン - ULTRA ARCHIVES{% endblock %}
 
 {% block content %}
 <div class="page-login">
     <div class="form-container">
-        <h1>Login</h1>
+        <h1>ログイン</h1>
         <form method="post" class="auth-form">
             <div class="form-group">
-                <label for="username">Username</label>
-                <input type="text" id="username" name="username" placeholder="Enter your username" required>
+                <label for="username">ユーザー名</label>
+                <input type="text" id="username" name="username" placeholder="ユーザー名を入力" required>
             </div>
 
             <div class="form-group">
-                <label for="password">Password</label>
-                <input type="password" id="password" name="password" placeholder="Enter your password" required>
+                <label for="password">パスワード</label>
+                <input type="password" id="password" name="password" placeholder="パスワードを入力" required>
             </div>
 
-            <button type="submit" class="btn btn-primary">Login</button>
+            <button type="submit" class="btn btn-primary">ログイン</button>
         </form>
 
         <div class="auth-footer">
-            <p>Don't have an account? <a href="/register">Register here</a></p>
+            <p>アカウントがありませんか? <a href="/register">こちらから登録</a></p>
         </div>
     </div>
 </div>
