ボタンの調整

--- a/templates/player.html
+++ b/templates/player.html
@@ -70,7 +70,7 @@
 
             <!-- ダウンロードボタン -->
             <div class="download-section">
-                <a href="/download/{{ song[0] }}" class="btn btn-secondary">ダウンロード</a>
+                <a href="/download/{{ song[0] }}" class="btn btn-sm btn-secondary">ダウンロード</a>
             </div>
         </div>
 
