--- a/templates/base.html
+++ b/templates/base.html
@@ -12,7 +12,9 @@
     <nav class="navbar">
         <div class="nav-container">
             <div class="nav-brand">
-                <a href="/">ULTRA ARCHIVES</a>
+                <a href="/" aria-label="ULTRA ARCHIVES">
+                    <img src="{{ url_for('static', filename='images/logo.png') }}" alt="ULTRA ARCHIVES ロゴ" class="nav-logo">
+                </a>
             </div>
             <div class="nav-menu">
                 {% if session.get('user_id') %}
